@@ -66,7 +66,7 @@ ArchiveBlockEncrypted true
 ScanPDF true
 % }
 % if (scalar(@paths)) {
-ScanOnAccess yes
+OnAccessExcludeRootUID yes
 % foreach my $path (@paths) {
 OnAccess<% $path %>
 % }
