@@ -1,3 +1,8 @@
+HEAD
+	+ Add new scripts to freshclam's apparmor profile
+	+ Remove ScanOnAccess in favor of OnAccessExcludeUname
+	+ Add new systemd service for antivirus-clamonacc
+	+ Add new regex for logging purposes
 6.1.1
 	+ Use AlertBrokenExecutables instead of deprecated DetectBrokenExecutables option 
 	  for clamav 0.101.4 (fix #1898)
